# SE-KB-Engine

./: .gitignore  CRAWLER_INTEGRATION.md  DEPLOY_PLAN.md  HTML_CLEANING_VERIFICATION_REPORT.md  README.md  TOOL_INTEGRATION_SUMMARY.md  UNIVERSAL_KNOWLEDGE_PROMPT_UPGRADE_REPORT.md  USAGE_GUIDE.md  ai_knowledge_extraction_result.json  ai_vs_rules_analysis_report.md  check_chromadb.py  client.py  comparison_ai_vs_rules.py  comparison_test.py  crawl_csdn.py  debug_search_tool.py  exporter.py  exporter_v2.py  llm_client.py  llm_extractor.py  process_today_data.py  pyproject.toml  quality_report.json  registry.py  requirements-prod.txt  requirements.txt  server.py  start_auto_trigger.py  start_public_server.py  start_web.py  test_ai_knowledge_extraction.py  test_concept_extraction.py  test_csdn_crawl.py  test_csdn_quality.py  test_direct_scrape.py  test_duckduckgo.py  test_enhanced_tool.py  test_fixed_fields.py  test_html_cleaner.py  test_html_structure_demo.py  (+14 more)
adapters/: __init__.py  concepts_adapter.py  dfd_adapter.py  enhanced_adapters.py  llm_preselector.py  rules_adapter.py
api/: app.py  auth.py
config/: CONFIG_GUIDE.md  CONFIG_GUIDE_FOCUSED.md  PRESELECTOR_CONFIG.md  html_cleaner_rules.json  path_config.py  simhash_config.json  system_prompts.json  system_prompts_focused.json  system_prompts_v3.json  system_prompts_v4.json  system_prompts_v5.json  universal_knowledge_template.json  universal_knowledge_template_guide.md  vision_model.json
deploy/: Dockerfile  docker-compose.yml  nginx.conf
docs/: CRAWLER_TECH_SUMMARY.md  DFD转结构图爬取目标内容.md  KNOWLEDGE_DEDUP_SUMMARY.md  (+6 more)
(+206 files in other folders)
